# school_drone_test

./: README.md  ssh_talk
activity_control_pkg/: CMakeLists.txt  package.xml
activity_control_pkg/include/activity_control_pkg/: route_target_publisher.hpp
activity_control_pkg/launch/: route_target_publisher.launch.py  route_test.launch.py
activity_control_pkg/src/: route_target_publisher.cpp  route_target_publisher_main.cpp  route_test_node.cpp
circle_detector/: package.xml  setup.cfg  setup.py
circle_detector/circle_detector_pkg/: circle_detector_node.py  detector_core.py  magnet_control_node.py
circle_detector/launch/: circle_detector_pkg.launch.py
laser_array_pkg/: CMakeLists.txt  package.xml
laser_array_pkg/launch/: laser_array.launch.py  laser_array_ground.launch.py
laser_array_pkg/src/: laser_array_driver.cpp  laser_array_ground_node.cpp
my_carto_pkg/: CMakeLists.txt
my_carto_pkg/launch/: fly_carto.launch.py
my_carto_pkg/rviz/: cartographer.rviz
my_launch/: package.xml
my_launch/launch/: demo1.launch.py
pid_control_pkg/: CMakeLists.txt  package.xml
pid_control_pkg/include/pid_control_pkg/: pid_controller.hpp
pid_control_pkg/launch/: position_pid_controller.launch.py
pid_control_pkg/src/: pid_controller.cpp
pillar_detector_pkg/: CMakeLists.txt  package.xml
pillar_detector_pkg/include/pillar_detector_pkg/: pillar_detector_node.hpp
pillar_detector_pkg/launch/: pillar_detector.launch.py
pillar_detector_pkg/src/: pillar_detector_main.cpp  pillar_detector_node.cpp
serial_comm/: CMakeLists.txt  package.xml
serial_comm/include/serial_comm/: serial_comm.h
serial_comm/src/: serial_comm.cpp
uart_to_stm32/: CMakeLists.txt  package.xml
uart_to_stm32/include/uart_to_stm32/: uart_to_stm32.hpp
uart_to_stm32/launch/: uart_to_stm32.launch.py
uart_to_stm32/src/: uart_to_stm32.cpp  uart_to_stm32_node.cpp
