<?xml version="1.0"?>
<package format="3">
  <name>pillar_detector_pkg</name>
  <version>0.1.0</version>
  <description>Detects square pillars from a stationary LiDAR scan before takeoff.</description>

  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
